tests/baselines/reference/declInput.errors.txt
tests/cases/compiler/declInput.ts(1,11): error TS2300: Duplicate identifier 'bar'.
tests/cases/compiler/declInput.ts(5,7): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/compiler/declInput.ts (2 errors) ====
    interface bar {
              ~~~
!!! error TS2300: Duplicate identifier 'bar'.
    
    }
    
    class bar {
          ~~~
!!! error TS2300: Duplicate identifier 'bar'.
      public f() { return ''; }
      public g() { return {a: <bar>null, b: undefined, c: void 4 }; }
      public h(x = 4, y = null, z = '') { x++; }
    }
    